Remove server.js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
          </div>
       </div>
 
-      <script src="./modules/spotifyAPI.js" type="module" async defer></script>
-      <script src="./server.js" async defer></script>
+      <script src="./modules/spotifyAPI.js" type="module"></script>
    </body>
 </html>
