Render data from api to view

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Implicit Grant Flow with Spotify API</title>
+      <title>SPA Using Spotify API</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="">
@@ -13,8 +13,11 @@
 
       <div class="container">
          <div id="login">
-            <h1>Implicift Grant Flow</h1>
+            <h1>SPA Using Spotify API</h1>
             <button id="login-button"class="btn btn-primary">Log in with Spotify</button>
+         </div>
+         <div class="profile-container">
+            <h2 id="display-name"></h2>
          </div>
          <div class="loggedin">
             <div id="user-profile"></div>
