Change script src

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
          </div>
       </div>
 
-      <script src="./modules/spotifyAPI.js" type="module"></script>
+      <script src="./modules/spotify.js" type="module"></script>
    </body>
 </html>
