--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <div class="container">
          <div id="login">
-            <h1>SPA Using Spotify API</h1>
+            <h1>Authenthicate Spotify</h1>
             <button id="login-button"class="btn btn-primary">Log in with Spotify</button>
          </div>
          <div class="profile-container">
@@ -25,6 +25,8 @@
          </div>
       </div>
 
+      <script src="./data/handleData.js" type="module"></script>
       <script src="./modules/spotify.js" type="module"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/routie/0.3.2/routie.min.js" integrity="sha512-uawpwYzsuRBIPLEokpO3B70T3/gISq67oTbMbUxvO3CeWaDxvLxwSq6Lb3cYeGUj1Pr//s1tPjVmlRZ/HEDazQ==" crossorigin="anonymous"></script>
    </body>
 </html>
