change class to id on list-container

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
    <body>
 
       <div class="container">
+
          <div id="login">
             <h1>Authenthicate Spotify</h1>
             <button id="login-button"class="btn btn-primary">Log in with Spotify</button>
          </div>
-         <div class="list-container">
-            <div id="item-container">
-            </div>
+
+         <div id="list-container"></div>
+         
          </div>
       </div>
       <script src="./data/handleData.js" type="module"></script>
