feat: initialize from app and load in routie

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <title>SPA Using Spotify API</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="">
+      <link rel="stylesheet" href="./css/styles.css">
    </head>
 
    <body>
@@ -22,6 +22,9 @@
          
          </div>
       </div>
-      <script src="./render/homeView.js" type="module"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/routie/0.3.2/routie.min.js"
+            integrity="sha512-uawpwYzsuRBIPLEokpO3B70T3/gISq67oTbMbUxvO3CeWaDxvLxwSq6Lb3cYeGUj1Pr//s1tPjVmlRZ/HEDazQ=="
+            crossorigin="anonymous"></script>
+      <script src="./app.js" type="module"></script>
    </body>
 </html>
