--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
       <div class="container">
 
          <div id="login">
-            <h1>Authenthicate Spotify</h1>
-            <button id="login-button"class="btn btn-primary">Log in with Spotify</button>
+            <div class="header">
+               <a class="spotify-logo" href="spotify.com/nl"></a>
+            </div>
+            <h1>You are logged out.</h1>
+            <button id="login-button"class="btn btn-primary">Log in</button>
          </div>
 
          <div id="list-container"></div>
