--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
          </div>
 
          <div id="list-container"></div>
-         
+         <div id="tracks-container">
+            <ul id="tracks-list"></ul>
+         </div>
          </div>
       </div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/routie/0.3.2/routie.min.js"
