Create loader element

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             <h1>You are logged out.</h1>
             <button id="login-button"class="btn btn-primary">Log in</button>
          </div>
-
+         <div id="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+         </div>
          <div id="list-container"></div>
          <div id="tracks-container">
             <ul id="tracks-list"></ul>
