--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@
             <h1>You are logged out.</h1>
             <button id="login-button"class="btn btn-primary">Log in</button>
          </div>
-         <div id="loader">
-            <span></span>
-            <span></span>
-            <span></span>
-         </div>
+
          <div id="list-container"></div>
-         <div id="tracks-container">
-         </div>
-         </div>
+
+         <div id="tracks-container"></div>
+
       </div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/routie/0.3.2/routie.min.js"
             integrity="sha512-uawpwYzsuRBIPLEokpO3B70T3/gISq67oTbMbUxvO3CeWaDxvLxwSq6Lb3cYeGUj1Pr//s1tPjVmlRZ/HEDazQ=="
