feat: loader works

--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
             <button id="login-button"class="btn btn-primary">Log in</button>
          </div>
 
+         <div id="loader" class="loader-off">
+            <span></span>
+            <span></span>
+            <span></span>
+         </div>
+
          <div id="list-container"></div>
 
          <div id="tracks-container"></div>
 
       </div>
+
       <script src="https://cdnjs.cloudflare.com/ajax/libs/routie/0.3.2/routie.min.js"
             integrity="sha512-uawpwYzsuRBIPLEokpO3B70T3/gISq67oTbMbUxvO3CeWaDxvLxwSq6Lb3cYeGUj1Pr//s1tPjVmlRZ/HEDazQ=="
             crossorigin="anonymous"></script>
